# video-wall

./: .editorconfig  .gitignore  AGENTS.md  ARCHITECTURE.md  AUDIT_REPORT.md  BUILD_LINUX.md  BUILD_REPORT.md  CHANGELOG.md  CLAUDE.md  CODEREVIEW_REPORT.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile.linux  LICENSE  LINT_REPORT.md  PIPELINE_LOG.md  README.md  RESTYLE_REPORT.md  SECURITY.md  SETUP.md  TECHSTACK.md  VERSION_MAP.md  VideoWall-arm64.spec  VideoWall-intel.spec  VideoWall-intel.spec.backup.20251031_024921  VideoWall.app alias  VideoWall.spec  VideoWall.spec.backup.20251031_024907  WIRE_AUDIT_REPORT.md  build-linux-alpine.sh  build-linux.sh  compile-build-dist-universal.sh  create-linux-package.sh  implement.md  m3u8-hosts.m3u8  package-lock.json  pyproject.toml  qt_plugin_path_hook.py  requirements-dev.txt  requirements.txt  (+7 more)
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-linux.yml  lint.yml  python-ci.yml  test.yml
.serena/: project.yml
.version-analysis/: ORGANIZATION_LOG.md
config/: m3u8-hosts.m3u8
dev/: BUILD-COMPILE-DIST-Electron-Build-System.md  CLAUDE.md  PROJECT_MANIFEST.json  PROJECT_STRUCTURE_STANDARDS.md  VERSION_MAP.md  compile-build-python.md
docs/: API-DOCS.md  ARCHITECTURE.md  BUILD_COMPILE.md  CHANGELOG.md  CLAUDE.do  CONTRIBUTING.md  DEPLOYMENT.md  DEVELOPMENT.md  DOCUMENTATION_INDEX.md  FAQ.md  INSTALL.md  LEARNINGS.md  PRD.md  PROJECT_MANIFEST.json  QUICK_START.md  STREAMS_CONFIGURATION.md  TODO.md  TROUBLESHOOTING.md  WORKFLOW.md
resources/icons/: icon.icns
scripts/: build-universal.sh  compile-build-dist-universal.sh  compile-build-dist.sh  qt_plugin_path_hook.py  repository-cleanup.sh  run-linux.sh  run-macos.sh  run-windows.bat  temp-cleanup.sh  test_app.py
scripts/legacy/: multi-monitor-local-video-wall-windowed-mode.py  multi-monitor-m3u8-video-wall-with-local-fallback.py  pyqt5-local-windowed-multimonitor.py  pyqt5-m3u8-grid-professional.py  pyqt5-m3u8-multimonitor-fallback.py  pyqt5-video-wall-effects-utils.py  pyqt5-video-wall-m3u8-streaming.py  pyqt5-video-wall-with-effects-and-controls.py  standalone-dynamic-video-wall-m3u8-streams.py  standalone-m3u8-stream-player-copy.py  standalone-m3u8-stream-player.py  standalone-multi-monitor-m3u8-with-fallback.py  standalone-roku-integration-video-wall.py  standalone-vlc-dynamic-tiles-video-wall.py  standalone-vlc-floating-tiles-video-wall.py  stream-based-dynamic-video-wall-m3u8.py  video_utils.py  vlc-dynamic-video-wall-with-hardware-acceleration.py  vlc-floating-tiles-video-wall.py  vlc-hybrid-roku-plex.py  vlc-local-dynamic-tiles.py  vlc-local-floating-animated.py  vlc_utils.py
src/: __init__.py  __main__.py  main.py
src/config/: __init__.py  settings.py
src/core/: __init__.py  animator.py  app.py  display_manager.py  layout_manager.py  recorder.py  stream_tracker.py  video_loader.py  video_manager.py  video_wall.py
src/ui/: __init__.py  dialogs.py  status_overlay.py  theme.py  video_tile.py
src/utils/: __init__.py  file_utils.py  stream_utils.py
